spector header T sidebar

--- a/src/Styles/adminPanel.scss
+++ b/src/Styles/adminPanel.scss
@@ -84,7 +84,7 @@
   right: 0 !important ;
   width: 240px;
 }
-.drawerClose {
+// .drawerClose {
   //width: 57px;
   //overflow: hidden;
   //-webkit-transition: width 3s ease-in-out;
@@ -92,7 +92,7 @@
   //-o-transition: width 3s ease-in-out;
   //transition: width 3s ease-in-out;
   //transition-timing-function: ease-in;
-}
+// }
 .toolbar {
   font-size: 20px;
   display: flex;
