--- a/src/Styles/menu.scss
+++ b/src/Styles/menu.scss
@@ -33,3 +33,16 @@
   padding: .5rem;
   border-radius: 30px;
 }
+.grey {
+  background: #cfcfcf;
+}
+
+.signup {
+  background-color: transparent;
+  color: rgb(2, 103, 100) !important;
+  border: 1px solid rgb(2, 103, 100) !important;
+  height: 30px!important;
+  padding: 0 10px!important;
+  border-radius: 30px!important;
+  font-size: 12px;
+}
